# github_devcard_generator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  agent.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_gemini.py  test_models.py  verify_backend.py
backend/static/cards/: educ-jkescritor.html  jjobligado.html  polsalarm.html  torvalds.html  torvals.html
frontend/: Dockerfile  index.html
